tabs and gap correction

--- a/src/app/brand-solution/performance-marketing/style.css
+++ b/src/app/brand-solution/performance-marketing/style.css
@@ -709,7 +709,7 @@
   }
 
   .standard-feature {
-    margin-top: 0 !important;
+    margin-top: 2rem !important;
     padding-top: 0 !important;
   }
   .performance-marketing-main-page .faq-web-dev .inner-heading {
@@ -784,7 +784,7 @@
   .performance-marketing-main-page .main-section-heading {
     font-size: 2rem;
     font-weight: 600;
-    margin-top: 2rem !important;
+    margin-top: 0.25rem !important;
     margin-bottom: 2rem !important;
   }
 
